--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Joke Teller</title>
     <link
       rel="icon"
       type="image/png"
       href="https://www.google.com/s2/favicons?domain=udemy.com"
     />
     <link rel="stylesheet" href="/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
   </head>
   <body>
+    <div class="container">
+      <button id="button">Tell Me A Joke</button>
+      <audio src="" id="audio" controls hidden></audio>
+    </div>
     <!-- Stript file -->
+    <script src="/voice.js"></script>
     <script src="/stript.js"></script>
   </body>
 </html>
